add note about AI-READI (for course demo)

--- a/PythonMaterials/01-Introduction.ipynb
+++ b/PythonMaterials/01-Introduction.ipynb
@@ -19,7 +19,9 @@
     }
    },
    "source": [
-    "**Important Note**: This course was originally designed and developed by [Tom Donoghue](https://tomdonoghue.github.io/)."
+    "**Important Note**: This course was originally designed and developed by [Tom Donoghue](https://tomdonoghue.github.io/).\n",
+    "\n",
+    "These materials are for the AI-READI Bootcamp."
    ]
   },
   {
