Can I make an edit?

--- a/PythonMaterials/02-Tooling.ipynb
+++ b/PythonMaterials/02-Tooling.ipynb
@@ -23,7 +23,8 @@
     }
    },
    "source": [
-    "This notebook will guide through the tools you will need for this bootcamp, and how to get them. "
+    "This notebook will guide through the tools you will need for this bootcamp, and how to get them. \n",
+    "Can I edit this?"
    ]
   },
   {
