--- a/PythonMaterials/01-Introduction.ipynb
+++ b/PythonMaterials/01-Introduction.ipynb
@@ -21,7 +21,7 @@
    "source": [
     "**Important Note**: This course was originally designed and developed by [Tom Donoghue](https://tomdonoghue.github.io/).\n",
     "\n",
-    "These materials are for the AI-READI Bootcamp."
+    "These materials are for the AI-READI Bootcamp. Test2"
    ]
   },
   {
