--- a/PythonMaterials/01-Introduction.ipynb
+++ b/PythonMaterials/01-Introduction.ipynb
@@ -19,9 +19,7 @@
     }
    },
    "source": [
-    "**Important Note**: This course was originally designed and developed by [Tom Donoghue](https://tomdonoghue.github.io/).\n",
-    "\n",
-    "These materials are for the AI-READI Bootcamp. Test2"
+    "**Important Note**: This course was originally designed and developed by [Tom Donoghue](https://tomdonoghue.github.io/)."
    ]
   },
   {
@@ -111,7 +109,7 @@
     }
    ],
    "source": [
-    "variable_name = \"variable name. \"\n",
+    "variable_name = \"variable name.\"\n",
     "print(variable_name)"
    ]
   },
