--- a/Notebooks/a1-ProgrammingFundamentals.ipynb
+++ b/Notebooks/a1-ProgrammingFundamentals.ipynb
@@ -1,7 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -11,6 +12,7 @@
      "solution": false
     }
    },
+   "outputs": [],
    "source": [
     "# Programming Fundamentals\n",
     "\n",
@@ -52,8 +54,7 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -63,13 +64,16 @@
      "solution": true
     }
    },
-   "outputs": [],
    "source": [
-    "# Create the variables\n"
+    "number = 57\n",
+    "decimal = 9.32\n",
+    "word = \"AI-READI\"\n",
+    "int_dec = int(decimal)\n"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -79,6 +83,7 @@
      "solution": false
     }
    },
+   "outputs": [],
    "source": [
     "## Q2\n",
     "\n",
@@ -92,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -102,9 +107,73 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'b', 'c']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Create the lits\n"
+    "string_list = ['a', 'b', 'c']\n",
+    "float_list = [1.0, 2.0, 3.0 ]\n",
+    "int_list = [1, 2, 3]\n",
+    "nested_list =[string_list, float_list, int_list]\n",
+    "\n",
+    "print(string_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.0, 2.0, 3.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(float_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(int_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['a', 'b', 'c'], [1.0, 2.0, 3.0], [1, 2, 3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(nested_list)"
    ]
   },
   {
@@ -128,6 +197,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -171,9 +247,73 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Indexing\n"
+    "# Indexing\n",
+    "index_1 = list_1[0:1]\n",
+    "print(index_1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[23]\n"
+     ]
+    }
+   ],
+   "source": [
+    "index_2 = list_2[5:6]\n",
+    "print(index_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "index_3 = list_3[0:4]\n",
+    "print(index_3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9, 98, 289, 938]\n"
+     ]
+    }
+   ],
+   "source": [
+    "index_4 = [9, 98, 289, 938]\n",
+    "print(index_4)"
    ]
   },
   {
@@ -206,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 40,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -216,17 +356,34 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'BDNF': 'brain derived neuerotropic factor', 'DISC1': 'disrupted in schizophrenia 1', 'PAX5': 'paired box 5'}\n"
+     ]
+    }
+   ],
    "source": [
     "# Gene dictionary\n",
+    "gene_dict = {'BDNF':'brain derived neuerotropic factor', 'DISC1': 'disrupted in schizophrenia 1', 'PAX5':'paired box 5' }\n",
+    "print(gene_dict)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "celltoolbar": "Create Assignment",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -240,7 +397,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
